--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portfolio Website</title>
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
@@ -301,12 +301,12 @@ span{
             <h1>Hi, It's <span>Prince</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>I am a Web developer And currently I do Intrenship in many companies like Progidy Infotech and Code Alpha. I love to Play cricket And I am enthusiastic about Trading Some time I trade in Forex Market.</p>
-            <!-- <div class="social-icons">
+            <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            </div> -->
+            </div>
             <a href="#" class="btn">Hire me</a>
         </div>
     </section>
